# cpp_project_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.sh  bootstap_msan.sh  bootstrap.sh  build.sh  clean.sh  install_deps.sh  test.sh  toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bootstrap.py  bootstrap.sh  build.sh  clang_format_lint.yml  install_clang.sh  install_compiler.sh  install_deps.sh  install_gcc.sh  install_snap.sh  main.yml
cmake/: benchmark.cmake  boost.cmake  ccache.cmake  cpp_project_template-config.cmake  gbenchmark.cmake  gbenchmark.cmake.in  googletest.cmake  gtest.cmake  gtest.cmake.in  range_v3.cmake  rangev3.cmake  rangev3.cmake.in
project_templates/executable/: CMakeLists.txt
project_templates/header_only_library/: CMakeLists.txt
project_templates/header_only_library/benchmarks/: CMakeLists.txt  add.cc  mul.cc
project_templates/header_only_library/examples/: 01_add.cc  02_mul.cc  CMakeLists.txt
project_templates/header_only_library/include/manavrion/: header_only_library_sample.h
project_templates/header_only_library/tests/: CMakeLists.txt  test.cc
project_templates/static_library/: CMakeLists.txt
project_templates/static_library/benchmarks/: CMakeLists.txt  add.cc  mul.cc
project_templates/static_library/examples/: 01_add.cc  02_mul.cc  CMakeLists.txt
project_templates/static_library/include/manavrion/: static_library_sample.h
project_templates/static_library/lib/manavrion/: static_library_sample.cc
project_templates/static_library/tests/: CMakeLists.txt  sample_unittest.cc  test.cc
scripts/: bootstrap_msan.sh
src/: CMakeLists.txt
src/http_server/: CMakeLists.txt  connection.cc  connection.h  connection_manager.cc  connection_manager.h  header.h  main.cc  mime_types.cc  mime_types.h  reply.cc  reply.h  request.h  request_handler.cc  request_handler.h  request_parser.cc  request_parser.h  server.cc  server.h
src/lib/: CMakeLists.txt  sample.cc  sample.h  sample_unittest.cc
src/unittests/: CMakeLists.txt
toolchain/: default_toolchain.cmake  enabled_options.cmake  linux_clang.cmake  linux_clang_asan.cmake  linux_clang_benchmark.cmake  linux_clang_lsan.cmake  linux_clang_msan.cmake  linux_clang_tsan.cmake  linux_clang_ubsan.cmake  linux_gcc.cmake  macos_clang.cmake  macos_llvm.cmake  ubuntu_clang.cmake  ubuntu_gcc.cmake  ubuntu_llvm.cmake  ubuntu_llvm_asan.cmake  ubuntu_llvm_libcpp.cmake  ubuntu_llvm_lsan.cmake  ubuntu_llvm_msan.cmake  ubuntu_llvm_msan.sh  ubuntu_llvm_tsan.cmake  ubuntu_llvm_ubsan.cmake  windows_msvc.cmake
